--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
 }
 
 header {
-    background-color: rgba(113, 118, 121, 0.5);
+    background-color: rgba(95, 103, 112, 0.6);
     height: 5rem;
     position: sticky;
     top: 0;
-    /* height: 100%;    */
+    height: 100%;   
 }
 
 img,
@@ -128,6 +128,7 @@ video {
     height: 100vh;
     position: relative;
     /* overflow: hidden; */
+    /* background-image: url("https://templatemo.com/templates/templatemo_548_training_studio/assets/images/gym-video.mp4") center/cover no-repeat; */
 }
 
 .hero video {
@@ -142,25 +143,25 @@ video {
 .hero_event {
     display: flex;
     align-items: center;
-    text-align: center;
-    position: absolute;
-    justify-content: center;
+    /* text-align: center; */
+    /* position: absolute; */
+    /* justify-content: center; */
     flex-direction: column;
     z-index: 2;
-    gap: 20px;
+    gap: 1.5rem;
     max-width: 90%;
 }
 
 .hero_event h6 {
     font-size: 1.5rem;
     font-weight: 400;
-    color: #333;
+    color: #fff;
 }
 
 .hero_event h1 {
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: 900;
-    color: #333;
+    color: #fff;
 }
 
 .hero_event h1 span {
@@ -169,7 +170,7 @@ video {
 
 .hero_event button {
     font-size: 1rem;
-    padding: 10px;
+    padding: 1rem;
     border-radius: 4px;
     background-color: tomato;
     border-color: tomato;
@@ -533,6 +534,7 @@ video {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 3rem;
 }
 
 .file fieldset {
@@ -547,6 +549,14 @@ video {
 
 .file fieldset textarea {
     padding: 25px;
+}
+.file button{
+    padding: 1rem;
+    background-color: tomato;
+    border: none;
+    color: #fff;
+
+
 }
 
 iframe {
